dom0: fix container autostart
The container autostart code was getting tied up with the missing
cgmanager and the TTY handling of systemd.

For now, we disable both and we can now start containers on boot.

Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/meta-cube/recipes-support/dom0-init/files/dom0-contctl.service
+++ b/meta-cube/recipes-support/dom0-init/files/dom0-contctl.service
@@ -11,9 +11,9 @@ ExecStart=/usr/sbin/dom0-containers start
 ExecStop=/usr/sbin/dom0-containers stop
 # Environment=BOOTUP=serial
 # Environment=CONSOLETYPE=serial
-Delegate=yes
-StandardInput=tty
-StandardOutput=tty
+# Delegate=yes
+# StandardInput=tty
+# StandardOutput=tty
 # StandardError=syslog
 
 [Install]
