cube: rework networking support
This wide ranging commit reworks the configuration of networking in an OverC
configuration.

Among the changes are:

 - ansible is only used to configure essential and not the networking configuration
 - containers themselves play no part in the network configuration, the logic and
   control structure is in networking hooks
 - dhcp and DNS is always (and only) on the network prime
 - the installer does not have absolute control over the networking, since all runtime
   logic is in hooks, we can dynamically re-configure the system
 - Existing naming in OverC configuration files continues to work

 - dom0 is always at 192.168.42.3
 - essential is always at 192.168.2
 - netprime is always at 192.168.1

 - if dom0 is both the netprime and itself, it is reachable by either IP

 - resolv.conf is written by the startup hooks, not the containers themselves

 - We have an updated oci-network hook that is capable of reading configuration
   values and configuing a runc basec container (system or not)

 - We have a new hook: cube-network, which has the same functionality as oci-network
   .. except for cubes

 - We have a new hook: cube-netprime, which is added to whatever container is the
   netprime and is responsible for setting up dnsmasq.

 - The netprime is explicitly configured for ip forwarding and NAT translation

 - oci configuration is capable of supporting X, hence cube-desktop

The existing ansible files are left for reference, since their logic may be required
in the hooks in the future.

Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/meta-cube/recipes-support/overc-conftools/source/ansible/netprime.yml
+++ b/meta-cube/recipes-support/overc-conftools/source/ansible/netprime.yml
@@ -7,6 +7,9 @@
   - name: Remove default configuration file for network-prime
     file: path=/opt/container/{{network_prime_container}}/rootfs/etc/systemd/network/20-wired.network state=absent
 
+  - name: Remove default veth configuration file for network-prime
+    file: path=/opt/container/{{network_prime_container}}/rootfs/etc/systemd/network/20-wired-veth.network state=absent
+
   - name: Add IPForward configuration for network-prime
     copy: content="[Match]\nName={{network_device}}\n\n[Network]\nDHCP=ipv4\nIPForward=ipv4\n"
       dest=/opt/container/{{network_prime_container}}/rootfs/etc/systemd/network/30-wired.network mode=0644
