dom0-contctl: Simplify startup
Make the dom0-contctl depend on the cube-cmd-server.service and switch
it to Type=simple.  The other logic in the service file is no longer
needed with recent changes to the cube-cmd-server and startup code.

Signed-off-by: Jason Wessel <jason.wessel@windriver.com>

--- a/meta-cube/recipes-support/dom0-contctl/files/dom0-contctl.service
+++ b/meta-cube/recipes-support/dom0-contctl/files/dom0-contctl.service
@@ -1,20 +1,13 @@
 [Unit]
 Description=Dom0 Autoboot Code
 After=syslog.target network.target
+After=cube-cmd-server.service
 
 [Service]
-Type=forking
+Type=simple
 RemainAfterExit=yes
-# ExecStartPre=
-# ExecStartPre=
 ExecStart=/opt/dom0-contctl/dom0-containers start
 ExecStop=/opt/dom0-contctl/dom0-containers stop
-# Environment=BOOTUP=serial
-# Environment=CONSOLETYPE=serial
-Delegate=yes
-StandardInput=tty
-StandardOutput=tty
-# StandardError=syslog
 
 [Install]
 WantedBy=basic.target
