overc-conftools: we can't check just for tzinfo
Per the ansible documentation "If a task fails or is skipped, the
variable still is registered with a failure or skipped status, the
only way to avoid registering a variable is using tags.". So the check
for tzinfo will always succeed and is insufficient. Instead we check
for tzinfo.stat.

Signed-off-by: Mark Asselstine <mark.asselstine@windriver.com>

--- a/meta-cube/recipes-support/overc-conftools/source/ansible/essential.yml
+++ b/meta-cube/recipes-support/overc-conftools/source/ansible/essential.yml
@@ -24,11 +24,11 @@
 
   - name: setup timezone if it is available
     copy: content="{{timezone}}\n" dest=/etc/timezone mode=0644
-    when: tzinfo is defined and tzinfo.stat.exists == True
+    when: tzinfo.stat is defined and tzinfo.stat.exists == True
 
   - name: create symlink for local time
     file: src=/usr/share/zoneinfo/{{timezone}} dest=/etc/localtime state=link
-    when: tzinfo is defined and tzinfo.stat.exists == True
+    when: tzinfo.stat is defined and tzinfo.stat.exists == True
 
   - name: create group is initial user is configured
     group: name={{initial_user}} state=present
