--- a/meta-cube/recipes-support/dom0-init/files/dom0-ctl-core.service
+++ b/meta-cube/recipes-support/dom0-init/files/dom0-ctl-core.service
@@ -6,7 +6,7 @@ After=syslog.target network.target
 Type=forking
 RemainAfterExit=yes
 # ExecStartPre=
-# ExecStartPre=
+ExecStartPre=/etc/dom0.d/firmware-sync
 ExecStart=/usr/sbin/dom0-containers start
 ExecStop=/usr/sbin/dom0-containers stop
 # Environment=BOOTUP=serial
