--- a/meta-cube/recipes-support/essential-init/files/essential-autostart.service
+++ b/meta-cube/recipes-support/essential-init/files/essential-autostart.service
@@ -7,6 +7,7 @@ After=dbus.service overc-conftools.service
 Type=forking
 RemainAfterExit=no
 ExecStart=-/usr/sbin/essential-autostart
+ExecStop=-/usr/sbin/essential-autostop
 
 [Install]
 WantedBy=basic.target
