overc: add virtualization to distro conf
meta-virtualization now requires virtualization and kvm to be in the
distro features to get the old default behaviour. So we add them to
our distro features variable.

Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/conf/distro/overc.conf
+++ b/conf/distro/overc.conf
@@ -12,7 +12,7 @@ TARGET_VENDOR = "-overc"
 LOCALCONF_VERSION = "1"
 LAYER_CONF_VERSION ?= "6"
 
-OVERC_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland alsa argp bluetooth ext2 usbgadget usbhost wifi xattr nfs zeroconf pci x11 pam"
+OVERC_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland alsa argp bluetooth ext2 usbgadget usbhost wifi xattr nfs zeroconf pci x11 pam virtualization kvm"
 OVERC_DEFAULT_EXTRA_RDEPENDS = "packagegroup-core-boot"
 OVERC_DEFAULT_EXTRA_RRECOMMENDS = "kernel-module-af-packet"
 
