--- a/meta-cube/recipes-support/essential-init/files/essential-autostart.service
+++ b/meta-cube/recipes-support/essential-init/files/essential-autostart.service
@@ -1,12 +1,14 @@
 [Unit]
 Description=Essential Autoboot Code
 After=syslog.target network.target
-After=dbus.service overc-conftools.service
+After=dbus.service overc-conftools.service systemd-machined.service
 
 [Service]
 Type=forking
 RemainAfterExit=no
 ExecStart=-/usr/sbin/essential-autostart
+# Container dom0 ignores SIGTERM
+ExecStop=-/bin/machinectl kill -s KILL dom0
 
 [Install]
 WantedBy=basic.target
