--- a/meta-cube/recipes-support/overc-conftools/source/overc-conftools.service
+++ b/meta-cube/recipes-support/overc-conftools/source/overc-conftools.service
@@ -6,7 +6,7 @@ After=local-fs.target openvswitch.service network.target
 Type=forking
 Environment=FACTER_ipaddress="192.168.42.2"
 #Only run on first boot and if RPM db has changed
-ExecStart=/bin/sh -c "[ /var/lib/rpm/Packages -nt /var/lib/rpm/overc-conf_run ] && /usr/bin/ansible-playbook /etc/overc-conf/ansible/overc.yml && cp --attributes-only -p /var/lib/rpm/Packages /var/lib/rpm/overc-conf_run"
+ExecStart=/bin/sh -c "if [ /var/lib/rpm/Packages -nt /var/lib/rpm/overc-conf_run ]; then /usr/bin/ansible-playbook /etc/overc-conf/ansible/overc.yml && cp --attributes-only -p /var/lib/rpm/Packages /var/lib/rpm/overc-conf_run; fi"
 
 [Install]
 WantedBy=multi-user.target
