overc-system-agent: introduce /etc/overc/.factory-reset.lock
It will be created by factory-reset.service at the first time when
system starting up, then the factory-reset.service will be locked
if the file exist in later updating processes.

This is to prevent the service being restarted when
overc-system-agent upgrades.

Signed-off-by: Ming Liu <liu.ming50@gmail.com>

--- a/meta-cube/recipes-support/overc-system-agent/files/overc-system-agent-1.2/factory-reset.service
+++ b/meta-cube/recipes-support/overc-system-agent/files/overc-system-agent-1.2/factory-reset.service
@@ -1,11 +1,13 @@
 [Unit]
 Description=factory reset post clean up
 After=local-fs.target
+ConditionPathExists=!/etc/overc/.factory-reset.lock
 
 [Service]
 Type=oneshot
 ExecStart=/opt/overc-system-agent/factory_clean.py
 ExecStartPost=/bin/systemctl disable factory-reset.service
+ExecStartPost=/bin/touch /etc/overc/.factory-reset.lock
 
 [Install]
 WantedBy=multi-user.target
