ansible: remove uncessarily modules and fix post.yml
Ansible installs a lot of modules that we don't use. To save the
disk space, we remove them in our install rule.

We also fixup the post.yml rule to work with the new set of
streamlined modules.

Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/meta-cube/recipes-support/overc-conftools/source/ansible/post.yml
+++ b/meta-cube/recipes-support/overc-conftools/source/ansible/post.yml
@@ -1,9 +1,13 @@
 ---
   - name: restart dnsmasq
-    service: name=dnsmasq state=restarted
+    systemd:
+      name: dnsmasq
+      state: restarted
 
   - name: restart networking
-    service: name=systemd-networkd state=restarted
+    systemd:
+      name: systemd-networkd
+      state: restarted
     when: configure_network_prime is defined
 
   - name: set system id
