ansible: replace netprime configure flag with "first boot" flag
We are now using the netprime configuration flag as a firstboot flag,
so we should just rename the variable appropriately.

We also restore the restart of systemd-networkd, otherwise br-int will
not have a valid IP on the first boot.

Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/meta-cube/recipes-support/overc-conftools/source/ansible/overc.yml
+++ b/meta-cube/recipes-support/overc-conftools/source/ansible/overc.yml
@@ -6,6 +6,6 @@
 
   tasks:
   - include: essential.yml
-    when: configure_network_prime is defined
+    when: first_boot is defined
 
   - include: post.yml
