--- a/meta-cube/recipes-support/overc-conftools/source/ansible/post.yml
+++ b/meta-cube/recipes-support/overc-conftools/source/ansible/post.yml
@@ -2,8 +2,20 @@
   - name: set system id
     command: /etc/overc-conf/system/systemid-set.sh
 
+  - name: restart networking
+    systemd:
+      name: systemd-networkd
+      state: restarted
+    when: first_boot is defined
+
   - name: disable configure_network_prime in next boot
     replace:
       dest: /etc/overc-conf/ansible/overc_config_vars.yml
       regexp: '^configure_network_prime: true'
       replace: '#configure_network_prime: true'
+
+  - name: disable first_boot in next boot
+    replace:
+      dest: /etc/overc-conf/ansible/overc_config_vars.yml
+      regexp: '^first_boot: true'
+      replace: '#first_boot: true'
