meta-cube: default to containerd-opencontainers
With the latest docker/runc uprev, we can use the opencontainers
containerd without issue.

Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/meta-cube/conf/layer.conf
+++ b/meta-cube/conf/layer.conf
@@ -34,7 +34,7 @@ FILESYSTEM_PERMS_TABLES = "files/fs-perms.txt files/cube-fs-perms.txt"
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto-dev"
 
 PREFERRED_PROVIDER_virtual/runc ?= "runc-docker"
-PREFERRED_PROVIDER_virtual/containerd ?= "containerd-docker"
+PREFERRED_PROVIDER_virtual/containerd ?= "containerd-opencontainers"
 
 # Default is currently /home/root which is non-standard.
 ROOT_HOME = "/root"
