LAYERSERIES_COMPAT: bump to sumo
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/meta-cube/conf/layer.conf
+++ b/meta-cube/conf/layer.conf
@@ -13,7 +13,7 @@ BB_DANGLINGAPPENDS_WARNONLY ?= "true"
 # This should only be incremented on significant changes that will
 # cause compatibility issues with other layers
 LAYERVERSION_cube = "1"
-LAYERSERIES_COMPAT_cube = "rocko"
+LAYERSERIES_COMPAT_cube = "sumo"
 LAYERDEPENDS_cube = "core"
 
 # Grub2 is annoying but grub-legacy doesn't do ext4 w/o patches
