layer.conf: force use of our nanomsg recipe
A nanomsg recipe has been added to meta-networking via
meta-openembedded commit 2de6f8d1b460 [nanomsg: add recipe]. At some
point we may decide to switch to using this recipe for the time being
continue using the recipe in our layer.

Signed-off-by: Mark Asselstine <mark.asselstine@windriver.com>

--- a/meta-cube/conf/layer.conf
+++ b/meta-cube/conf/layer.conf
@@ -19,6 +19,9 @@ LAYERDEPENDS_cube = "core"
 # Grub2 is annoying but grub-legacy doesn't do ext4 w/o patches
 #PREFERRED_VERSION_grub = "0.97"
 
+# Don't use the recipe in meta-networking
+PREFERRED_VERSION_nanomsg = "1.0.0+git%"
+
 # Default is only a single getty on VC1
 SYSVINIT_ENABLED_GETTYS = "1 2 3 4 5 6"
 
