cube-overc.conf: Update the busybox removal to the current approach
OE is now designed to have busybox be removable.  In order to do this we need
to set a number of items to their non-busybox alternatives.

Signed-off-by: Mark Hatle <mark.hatle@windriver.com>

--- a/meta-cube/conf/cube-overc.conf
+++ b/meta-cube/conf/cube-overc.conf
@@ -25,17 +25,14 @@ PREFERRED_PROVIDER_virtual/containerd ?= "containerd-opencontainers"
 ROOT_HOME = "/root"
 
 ####  begin busybox removal ####
-
-# Hammer approach ; change login_manager instead after looking at bitbake -e
-# RDEPENDS_packagegroup-core-full-cmdline-initscripts_remove = "busybox"
 VIRTUAL-RUNTIME_login_manager = "shadow"
 
-# Actions like "remove" are one item per line, not a list!
-RDEPENDS_packagegroup-core-boot_remove = "busybox"
-RDEPENDS_packagegroup-core-boot_remove = "busybox-hwclock"
-RDEPENDS_packagegroup-core-full-cmdline-sys-services_remove = "lighttpd"
+PREFERRED_PROVIDER_virtual/base-utils = "coreutils"
+VIRTUAL-RUNTIME_base-utils = "coreutils"
+VIRTUAL-RUNTIME_base-utils-hwclock = "util-linux-hwclock"
+VIRTUAL-RUNTIME_base-utils-syslog = "sysklogd"
 
-SYSVINIT_SCRIPTS_remove_pn-packagegroup-core-boot = "busybox-hwclock"
+RDEPENDS_packagegroup-core-full-cmdline-sys-services_remove = "lighttpd"
 
 ####  end busybox removal ####
 
