--- a/meta-cube/conf/layer.conf
+++ b/meta-cube/conf/layer.conf
@@ -58,3 +58,4 @@ SYSVINIT_SCRIPTS_remove_pn-packagegroup-core-boot = "busybox-hwclock"
 # default, essential rootfs is read-only. To change it to read-write, please update
 # value to "read-write", then rebuild essential rootfs.
 OVERC_ESSENTIAL_MODE = "read-only"
+LAYERSERIES_COMPAT_cube = "thud"
