--- a/meta-cube/recipes-kernel/linux/linux-yocto/lxc.cfg
+++ b/meta-cube/recipes-kernel/linux/linux-yocto/lxc.cfg
@@ -1,8 +1,7 @@
 CONFIG_CGROUP_DEVICE=y
 CONFIG_CPUSETS=y
 CONFIG_PROC_PID_CPUSET=y
-CONFIG_RESOURCE_COUNTERS=y
-CONFIG_CGROUP_MEM_RES_CTLR=y
+CONFIG_MEMCG=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_RT_GROUP_SCHED=y
@@ -14,11 +13,9 @@ CONFIG_USER_NS=y
 CONFIG_PID_NS=y
 CONFIG_NET_NS=y
 
-CONFIG_CLS_CGROUP=m
+CONFIG_NET_CLS_CGROUP=m
 CONFIG_BLK_CGROUP=m
-CONFIG_NETPRIO_CGROUP=m
-
-CONFIG_DEVPTS_MULTIPLE_INSTANCES=y
+CONFIG_CGROUP_NET_PRIO=m
 
 # Virtual drivers
 CONFIG_VIRTIO_BLK=y
@@ -28,7 +25,6 @@ CONFIG_HVC_DRIVER=y
 CONFIG_VIRTIO_CONSOLE=y
 CONFIG_HW_RANDOM_VIRTIO=m
 CONFIG_VIRTIO=y
-CONFIG_VIRTIO_RING=y
 CONFIG_VIRTIO_PCI=y
 CONFIG_VIRTIO_BALLOON=y
 CONFIG_VIRTIO_MMIO=y
