--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -262,7 +262,7 @@ BB_DISKMON_DIRS = "\
 # seen. The two lines below enable the SDL backend too. This assumes there is a
 # libsdl library available on your build system.
 PACKAGECONFIG_pn-qemu-native = "sdl"
-ASSUME_PROVIDED += "libsdl-native"
+ASSUME_PROVIDED += "libsdl2-native"
 
 
 # CONF_VERSION is increased each time build/conf/ changes incompatibly and is used to
