--- a/meta-cube/conf/layer.conf
+++ b/meta-cube/conf/layer.conf
@@ -5,7 +5,7 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${@bb.utils.contains('DISTRO', 'overc', '${LAYERDIR}/recipes-*/*/*.bb ${LAYERDIR}/recipes-*/*/*.bbappend', '', d)}"
 
 BBFILE_COLLECTIONS += "cube"
-BBFILE_PATTERN_cube = "${@bb.utils.contains('DISTRO', 'overc', '^${LAYERDIR}/', '', d)}"
+BBFILE_PATTERN_cube = "^${LAYERDIR}/"
 BBFILE_PRIORITY_cube = "8"
 
 BB_DANGLINGAPPENDS_WARNONLY ?= "true"
