--- a/meta-cube/conf/cube-overc.conf
+++ b/meta-cube/conf/cube-overc.conf
@@ -31,6 +31,7 @@ PREFERRED_PROVIDER_virtual/base-utils = "coreutils"
 VIRTUAL-RUNTIME_base-utils = "coreutils"
 VIRTUAL-RUNTIME_base-utils-hwclock = "util-linux-hwclock"
 VIRTUAL-RUNTIME_base-utils-syslog = "sysklogd"
+VIRTUAL-RUNTIME_dev_manager = "udev"
 
 RDEPENDS_packagegroup-core-full-cmdline-sys-services_remove = "lighttpd"
 
