--- a/conf/distro/overc.conf
+++ b/conf/distro/overc.conf
@@ -2,7 +2,7 @@ DISTRO = "overc"
 DISTRO_NAME = "overc"
 DISTRO_VERSION = "1.0"
 DISTRO_CODENAME = ""
-SDK_VENDOR = "-overc-sdk"
+SDK_VENDOR = "-overcsdk"
 SDK_VERSION := "${@'${DISTRO_VERSION}'.replace('snapshot-${DATE}','snapshot')}"
 
 MAINTAINER = "Wind River <windriver@windriver.com>"
