screen-getty: Add support for usrmerge
Fix the following problem when building with usrmerge

ERROR: screen-getty-0.1-r0 do_package: QA Issue: screen-getty: Files/directories were installed but not shipped in any package:
  /sbin/screen-getty
  /sbin/agetty-shell
Please set FILES such that these items are packaged. Alternatively if they are unneeded, avoid installing them or delete them within do_install.
screen-getty: 2 installed and not shipped files. [installed-vs-shipped]

Signed-off-by: Jason Wessel <jason.wessel@windriver.com>

--- a/meta-cube/recipes-extended/screen-getty/files/Makefile
+++ b/meta-cube/recipes-extended/screen-getty/files/Makefile
@@ -2,6 +2,7 @@
 OBJS = screen-getty agetty-shell
 
 DEST=/
+SBIN=/sbin
 
 all: $(OBJS)
 
@@ -18,8 +19,8 @@ agetty-shell: agetty-shell.o
 	$(CC) $(LDFLAGS) -Wall -o $@ $^
 
 install: $(OBJS)
-	install -d $(DEST)/sbin
+	install -d $(DEST)$(SBIN)
 	install -d $(DEST)/etc/default
 	install -m 0644 screen-gettyrc $(DEST)/etc/default
-	install -m 0755 screen-getty $(DEST)/sbin
-	install -m 0755 agetty-shell $(DEST)/sbin
+	install -m 0755 screen-getty $(DEST)$(SBIN)
+	install -m 0755 agetty-shell $(DEST)$(SBIN)
