pflask: modify Makefile definition of a space
Makefile is not part of the pflask distribution, but is
supplied by the recipe.  We change the way it defines the
$(sp) variable because the old way does not work for make 4.3.

Signed-off-by: Joe Slater <joe.slater@windriver.com>
Signed-off-by: Bruce Ashfield <bruce.ashfield@gmail.com>

--- a/meta-cube/recipes-containers/pflask/pflask/Makefile
+++ b/meta-cube/recipes-containers/pflask/pflask/Makefile
@@ -1,14 +1,17 @@
 #------------------------------------------------------------------------------
+# This is not part of the pflask distribution and is modified by hand.
+#------------------------------------------------------------------------------
 # WAFTOOLS generated makefile
 # version: 0.4.13
 # waf: 1.8.19
 #------------------------------------------------------------------------------
 
+
 SHELL=/bin/sh
 
 # commas, spaces and tabs:
-sp:= 
-sp+= 
+# Defining a space with 'sp:= ' does not work for recent make's
+sp :=  $(subst !, ,!)
 tab:=$(sp)$(sp)$(sp)$(sp)
 comma:=,
 
