--- a/conf/distro/overc.conf
+++ b/conf/distro/overc.conf
@@ -75,9 +75,9 @@ https://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n"
 # the variable to be empty.
 # Git example url: git://git.yoctoproject.org/yocto-firewall-test;protocol=git;rev=HEAD
 
-CONNECTIVITY_CHECK_URIS ?= " \
-             https://eula-downloads.yoctoproject.org/index.php \
-             http://bugzilla.yoctoproject.org/report.cgi"
+# CONNECTIVITY_CHECK_URIS ?= " \
+# https://eula-downloads.yoctoproject.org/index.php \
+# http://bugzilla.yoctoproject.org/report.cgi"
 
 SANITY_TESTED_DISTROS ?= " \
             overc-1.0 \n \
