overc: revert bind and dhclient removal/updaes
until we replace dhclient calls with dhcpd calls that work with bind
9.16+, we need # to pin ourselves at an older bind and dhclient.

Signed-off-by: Bruce Ashfield <bruce.ashfield@gmail.com>

--- a/conf/distro/overc.conf
+++ b/conf/distro/overc.conf
@@ -26,6 +26,10 @@ PREFERRED_VERSION_linux-yocto_qemumips ?= "5.4%"
 PREFERRED_VERSION_linux-yocto_qemumips64 ?= "5.4%"
 PREFERRED_VERSION_linux-yocto_qemuppc ?= "5.4%"
 
+# until we replace dhclient calls with dhcpd calls that work with bind 9.16+, we need
+# to pin ourselves at an older bind and dhclient.
+PREFERRED_VERSION_bind ?= "9.11%"
+
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDK_ARCH}-${IMAGE_BASENAME}-${TUNE_PKGARCH}"
 SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
 
