conf: add hardknott to compatibility
Signed-off-by: Bruce Ashfield <bruce.ashfield@gmail.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -12,5 +12,5 @@ BBFILE_PRIORITY_overc = "1"
 # cause compatibility issues with other layers
 LAYERVERSION_overc = "1"
 LAYERDEPENDS_overc = "core"
-LAYERSERIES_COMPAT_overc = "zeus dunfell"
+LAYERSERIES_COMPAT_overc = "zeus dunfell hardknott"
 
