--- a/meta-cube/conf/layer.conf
+++ b/meta-cube/conf/layer.conf
@@ -13,7 +13,7 @@ BB_DANGLINGAPPENDS_WARNONLY ?= "true"
 # This should only be incremented on significant changes that will
 # cause compatibility issues with other layers
 LAYERVERSION_cube = "1"
-LAYERSERIES_COMPAT_cube = "zeus dunfell"
+LAYERSERIES_COMPAT_cube = "zeus dunfell hardknott"
 LAYERDEPENDS_cube = "overc core"
 
 # We need to load the overc distro components, only if overc is out distro
