layer: update to new override syntax
Signed-off-by: Bruce Ashfield <bruce.ashfield@gmail.com>

--- a/meta-cube/conf/layer.conf
+++ b/meta-cube/conf/layer.conf
@@ -13,11 +13,11 @@ BB_DANGLINGAPPENDS_WARNONLY ?= "true"
 # This should only be incremented on significant changes that will
 # cause compatibility issues with other layers
 LAYERVERSION_cube = "1"
-LAYERSERIES_COMPAT_cube = "zeus dunfell hardknott"
+LAYERSERIES_COMPAT_cube = "honister"
 LAYERDEPENDS_cube = "overc core"
 
 # We need to load the overc distro components, only if overc is out distro
 # Since we don't know the distro during layer.conf load time, we delay using a
 # special bbclass that simple includes the CUBE_CONFIG_PATH file.
 CUBE_CONFIG_PATH = "${LAYERDIR}/conf/cube-overc.conf"
-USER_CLASSES_append = " ${@bb.utils.contains('DISTRO', 'overc', 'cube-cfg', '', d)}"
+USER_CLASSES:append = " ${@bb.utils.contains('DISTRO', 'overc', 'cube-cfg', '', d)}"
