layer: allow building if poky is the distro
Signed-off-by: Bruce Ashfield <bruce.ashfield@gmail.com>

--- a/meta-cube/conf/layer.conf
+++ b/meta-cube/conf/layer.conf
@@ -2,10 +2,10 @@
 BBPATH .= ":${LAYERDIR}"
 
 # We have recipes-* directories, add to BBFILES
-BBFILES += "${@bb.utils.contains('DISTRO', 'overc', '${LAYERDIR}/recipes-*/*/*.bb ${LAYERDIR}/recipes-*/*/*.bbappend', '', d)}"
+BBFILES += "${@bb.utils.contains_any('DISTRO', [ 'overc', 'poky' ], '${LAYERDIR}/recipes-*/*/*.bb ${LAYERDIR}/recipes-*/*/*.bbappend', '', d)}"
 
 BBFILE_COLLECTIONS += "cube"
-BBFILE_PATTERN_cube = "${@bb.utils.contains('DISTRO', 'overc', '^${LAYERDIR}/', '', d)}"
+BBFILE_PATTERN_cube = "${@bb.utils.contains_any('DISTRO', [ 'overc', 'poky' ], '^${LAYERDIR}/', '', d)}"
 BBFILE_PRIORITY_cube = "8"
 
 BB_DANGLINGAPPENDS_WARNONLY ?= "true"
