global: overrides update, pass 1
Signed-off-by: Bruce Ashfield <bruce.ashfield@gmail.com>

--- a/meta-cube/conf/cube-overc.conf
+++ b/meta-cube/conf/cube-overc.conf
@@ -33,7 +33,7 @@ VIRTUAL-RUNTIME_base-utils-hwclock = "util-linux-hwclock"
 VIRTUAL-RUNTIME_base-utils-syslog = "sysklogd"
 VIRTUAL-RUNTIME_dev_manager = "udev"
 
-RDEPENDS_packagegroup-core-full-cmdline-sys-services_remove = "lighttpd"
+RDEPENDS:packagegroup-core-full-cmdline-sys-services:remove = "lighttpd"
 
 ####  end busybox removal ####
 
