conf: allow poky or overc distros
Signed-off-by: Bruce Ashfield <bruce.ashfield@gmail.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -2,15 +2,15 @@
 BBPATH .= ":${LAYERDIR}"
 
 # We have recipes-* directories, add to BBFILES
-BBFILES += "${@bb.utils.contains('DISTRO', 'overc', '${LAYERDIR}/recipes-*/*/*.bb  ${LAYERDIR}/recipes-*/*/*.bbappend', '', d)}"
+BBFILES += "${@bb.utils.contains_any('DISTRO', ['overc','poky'], '${LAYERDIR}/recipes-*/*/*.bb  ${LAYERDIR}/recipes-*/*/*.bbappend', '', d)}"
 
 BBFILE_COLLECTIONS += "overc"
-BBFILE_PATTERN_overc = "${@bb.utils.contains('DISTRO', 'overc', '^${LAYERDIR}/', '', d)}"
+BBFILE_PATTERN_overc = "${@bb.utils.contains_any('DISTRO', ['overc','poky'], '^${LAYERDIR}/', '', d)}"
 BBFILE_PRIORITY_overc = "1"
 
 # This should only be incremented on significant changes that will
 # cause compatibility issues with other layers
 LAYERVERSION_overc = "1"
 LAYERDEPENDS_overc = "core"
-LAYERSERIES_COMPAT_overc = "zeus dunfell hardknott"
+LAYERSERIES_COMPAT_overc = "honister"
 
