global: override conversion pass #2
Signed-off-by: Bruce Ashfield <bruce.ashfield@gmail.com>

--- a/conf/distro/overc.conf
+++ b/conf/distro/overc.conf
@@ -19,12 +19,12 @@ INHERIT_DISTRO ?= " debian devshell sstate license package-name remove-libtool"
 include conf/${TARGET_ARCH}.conf
 
 PREFERRED_VERSION_linux-yocto ?= "5.4%"
-PREFERRED_VERSION_linux-yocto_qemux86 ?= "5.4%"
-PREFERRED_VERSION_linux-yocto_qemux86-64 ?= "5.4%"
-PREFERRED_VERSION_linux-yocto_qemuarm ?= "5.4%"
-PREFERRED_VERSION_linux-yocto_qemumips ?= "5.4%"
-PREFERRED_VERSION_linux-yocto_qemumips64 ?= "5.4%"
-PREFERRED_VERSION_linux-yocto_qemuppc ?= "5.4%"
+PREFERRED_VERSION_linux-yocto:qemux86 ?= "5.4%"
+PREFERRED_VERSION_linux-yocto:qemux86-64 ?= "5.4%"
+PREFERRED_VERSION_linux-yocto:qemuarm ?= "5.4%"
+PREFERRED_VERSION_linux-yocto:qemumips ?= "5.4%"
+PREFERRED_VERSION_linux-yocto:qemumips64 ?= "5.4%"
+PREFERRED_VERSION_linux-yocto:qemuppc ?= "5.4%"
 
 # until we replace dhclient calls with dhcpd calls that work with bind 9.16+, we need
 # to pin ourselves at an older bind and dhclient.
@@ -41,14 +41,14 @@ DISTRO_EXTRA_RRECOMMENDS += " ${OVERC_DEFAULT_EXTRA_RRECOMMENDS}"
 LICENSE_FLAGS_WHITELIST += " commercial"
 
 OVERCQEMUDEPS = "${@bb.utils.contains("INCOMPATIBLE_LICENSE", "GPLv3", "", "packagegroup-core-device-devel",d)}"
-DISTRO_EXTRA_RDEPENDS_append_qemuarm = " ${OVERCQEMUDEPS}"
-DISTRO_EXTRA_RDEPENDS_append_qemuarm64 = " ${OVERCQEMUDEPS}"
-DISTRO_EXTRA_RDEPENDS_append_qemumips = " ${OVERCQEMUDEPS}"
-DISTRO_EXTRA_RDEPENDS_append_qemuppc = " ${OVERCQEMUDEPS}"
-DISTRO_EXTRA_RDEPENDS_append_qemux86 = " ${OVERCQEMUDEPS}"
-DISTRO_EXTRA_RDEPENDS_append_qemux86-64 = " ${OVERCQEMUDEPS}"
+DISTRO_EXTRA_RDEPENDS:append:qemuarm = " ${OVERCQEMUDEPS}"
+DISTRO_EXTRA_RDEPENDS:append:qemuarm64 = " ${OVERCQEMUDEPS}"
+DISTRO_EXTRA_RDEPENDS:append:qemumips = " ${OVERCQEMUDEPS}"
+DISTRO_EXTRA_RDEPENDS:append:qemuppc = " ${OVERCQEMUDEPS}"
+DISTRO_EXTRA_RDEPENDS:append:qemux86 = " ${OVERCQEMUDEPS}"
+DISTRO_EXTRA_RDEPENDS:append:qemux86-64 = " ${OVERCQEMUDEPS}"
 
-DISTRO_FEATURES_append = " systemd"
+DISTRO_FEATURES:append = " systemd"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
 
