--- a/conf/x86_64.conf
+++ b/conf/x86_64.conf
@@ -1,4 +1,4 @@
 # multi lib config
 require conf/multilib.conf
 MULTILIBS = "multilib:lib32"
-DEFAULTTUNE_virtclass-multilib-lib32 = "x86"
+DEFAULTTUNE:virtclass-multilib-lib32 = "x86"
